src/objects/SCRB_SalesOrder__c.object
<CustomObject>
    <description>AstrumCRM/AstrumPM - The SalesOrder object is the result of a Closed Won Opportunity and handles the hand off from the sales team to the operations team.</description>
    <fields>
        <fullName>AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales Orders</relationshipLabel>
        <relationshipName>R00N300000011q88EAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Adder_Commission_Details__c</fullName>
        <inlineHelpText>Will need to have line items for each Entitlement and its Commission Impact</inlineHelpText>
        <label>Adder Commission Details ($)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Adder_Commission_Value__c</fullName>
        <inlineHelpText>Based on Lead Source information.</inlineHelpText>
        <label>Adder Commission Value ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Additional_Commission_Percent__c</fullName>
        <formula>IF(DATEVALUE(CreatedDate) &lt; DATEVALUE(&apos;2015-12-16&apos;), 
IF(
  AND(NOT(ISNULL(System_Design_Quote__r.Community_Program_Offer__c)), NOT(ISBLANK(System_Design_Quote__r.Community_Program_Offer__c))), 
  0.00,
  IF(
  OR(
    AND(ISPICKVAL(OpportunityId__r.LeadSource, &apos;Individual Referral&apos;),   OpportunityId__r.Referring_Account__r.OwnerId = AccountId__r.OwnerId),
    AND(ISPICKVAL(OpportunityId__r.LeadSource, &apos;Partner Referral&apos;), OpportunityId__r.Referring_Account__r.OwnerId = Original_Submit_Sales_Rep__c),
    ISPICKVAL(OpportunityId__r.LeadSource, &apos;Event&apos;)
  ), 
  0.01,
  IF(AND(OpportunityId__r.Self_Generated__c, NOT(ISNULL(OpportunityId__r.Contact_Detail__c)), NOT(ISBLANK(OpportunityId__r.Contact_Detail__c))), 0.02, 0.00))
), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Additional Commission (%)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Affiliate_Community_Program__c</fullName>
        <formula>TEXT ( OpportunityId__r.Affiliate_Community_Program__c )</formula>
        <label>Affiliate Community Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>All_Property_Owners_Are_On_Lease_Lease__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Lease ONLY - All Property Owners Are Listed On Lease</description>
        <inlineHelpText>Lease ONLY - All Property Owners Are Listed On Lease</inlineHelpText>
        <label>All Property Owners Are On Lease (Lease)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approval_Comment_Check__c</fullName>
        <label>Approval Comment Check</label>
        <picklist>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <label>Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approved_System_Design__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approved System Design</label>
        <referenceTo>System_Design__c</referenceTo>
        <relationshipLabel>Sales Orders</relationshipLabel>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assign_to_Dir_of_Ops__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assign to Dir of Ops</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Astrum_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Astrum Contract</label>
        <referenceTo>Astrum_Contract__c</referenceTo>
        <relationshipLabel>Sales Orders</relationshipLabel>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Astrum_Lease_Revenue_Adder__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Additions/Subtractions to Lease Revenue for Miscellaneous Reasons</description>
        <inlineHelpText>Additions/Subtractions to Lease Revenue for Miscellaneous Reasons</inlineHelpText>
        <label>Astrum Lease Revenue Adder ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Astrum_Lease_Revenue__c</fullName>
        <description>Astrum Revenue on Leased System</description>
        <formula>Astrum_Upfront_SREC_Value__c + CEG_Total_System_Price__c +  Total_Upfront_Lease_Payment__c - CEG_Deposit__c +  Astrum_Lease_Revenue_Adder__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Astrum Revenue on Leased System</inlineHelpText>
        <label>Astrum Lease Revenue ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Astrum_Office__c</fullName>
        <description>Astrum Office serving this Property</description>
        <formula>TEXT(Property__r.Astrum_Office__c)</formula>
        <inlineHelpText>Astrum Office serving this Property</inlineHelpText>
        <label>Astrum Office</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Astrum_Upfront_SREC_Value__c</fullName>
        <description>Value of Upfront SREC acquired by Astrum</description>
        <inlineHelpText>Value of Upfront SREC acquired by Astrum</inlineHelpText>
        <label>Astrum Upfront SREC Value ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_Commission_Percent__c</fullName>
        <label>Base Commission (%)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Base_Commission__c</fullName>
        <formula>Commission_System_Price__c * Commission_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Base Commission ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_Electricity_Price__c</fullName>
        <description>LEASE ONLY - Base Electricity Price</description>
        <inlineHelpText>LEASE ONLY - Base Electricity Price</inlineHelpText>
        <label>Base Electricity Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BillingCity__c</fullName>
        <label>Billing City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingCountry__c</fullName>
        <label>Billing Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingFax__c</fullName>
        <label>Billing Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>BillingPhone__c</fullName>
        <label>Billing Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>BillingPostalCode__c</fullName>
        <label>Billing Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingState__c</fullName>
        <label>Billing State/Province</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingStreet__c</fullName>
        <label>Billing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CEG_Deposit__c</fullName>
        <defaultValue>0</defaultValue>
        <description>LEASE ONLY - CEG Deposit ($)</description>
        <inlineHelpText>LEASE ONLY - CEG Deposit ($)</inlineHelpText>
        <label>CEG Deposit ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CEG_FMV_per_Watt_W__c</fullName>
        <defaultValue>6.990</defaultValue>
        <description>LEASE ONLY - Constellation Fair Market Value per Watt ($/W)</description>
        <inlineHelpText>LEASE ONLY - Constellation Fair Market Value per Watt ($/W)</inlineHelpText>
        <label>CEG FMV per Watt ($/W)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CEG_Total_System_Price_Lookup__c</fullName>
        <description>CEG Total System Price ($)</description>
        <formula>OpportunityId__r.CEG_Total_System_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>CEG Total System Price ($)</inlineHelpText>
        <label>CEG Total System Price Lookup ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CEG_Total_System_Price_W__c</fullName>
        <description>CEG Total System Price in $/Watt</description>
        <formula>CEG_Total_System_Price__c/( System_Size_kW__c *1000)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>CEG Total System Price in $/Watt</inlineHelpText>
        <label>CEG Total System Price ($/W)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CEG_Total_System_Price__c</fullName>
        <label>CEG Total System Price ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CP_Model_Days__c</fullName>
        <description>Model Construction Period in Days</description>
        <inlineHelpText>Model Construction Period in Days</inlineHelpText>
        <label>CP Model (days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSD_Pricing__c</fullName>
        <description>Construction Start Date for Pricing Model</description>
        <inlineHelpText>Construction Start Date for Pricing Model</inlineHelpText>
        <label>CSD Pricing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Calculator_Avoided_Utility_Price_kWh__c</fullName>
        <description>Calculator Avoided Utility Price ($/kWh)</description>
        <label>Calculator Avoided Utility Price ($/kWh)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Calculator_Utility_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Utility Company Entered in Lease Calculator</description>
        <label>Calculator Utility Company</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Utility_Company__c.RecordType.Name</field>
                <operation>notEqual</operation>
                <value>Custom</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Utility_Company__c</referenceTo>
        <relationshipLabel>Sales Orders</relationshipLabel>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Canceled_Comments__c</fullName>
        <label>Canceled Comments</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Canceled_Date__c</fullName>
        <description>Date when Sales Order Status Code is changed to Canceled.</description>
        <label>Canceled Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Cash_Back_Amount__c</fullName>
        <description>Cash back promo to be paid out to customer or netted off final invoice</description>
        <label>Cash Back Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cash_Rebate_Amount__c</fullName>
        <label>Cash Rebate Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Changed_By_Sales__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Change Alert -- After Sales Manager Approval This Sales Order Has Been Re-Synced With Opportunity At Least Once</description>
        <inlineHelpText>Change Alert -- After Sales Manager Approval This Sales Order Has Been Re-Synced With Opportunity At Least Once</inlineHelpText>
        <label>Changed By Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cleared4PM_Project__c</fullName>
        <formula>ISPICKVAL(StatusCode__c, &apos;Final/Accounting Approved&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cleared for PM Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closed_Scenario__c</fullName>
        <label>Closed Scenario</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Commission_Impact_Promotions_Given__c</fullName>
        <inlineHelpText>Based on Standard Promotions only.</inlineHelpText>
        <label>Commission Impact Promotions Given ($/W)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Paid__c</fullName>
        <description>Has the Sales Commission Been Paid?</description>
        <inlineHelpText>Has the Sales Commission Been Paid?</inlineHelpText>
        <label>Commission Paid</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Commission_Rate__c</fullName>
        <description>Base Commission Rate</description>
        <inlineHelpText>Base Commission Rate</inlineHelpText>
        <label>Commission Rate (%)</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Commission_System_Price__c</fullName>
        <label>Commission System Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Community_Program_Offer_Name__c</fullName>
        <formula>OpportunityId__r.Community_Program_Offer__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Community Program Offer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Program_Offer__c</fullName>
        <description>Community Program Offer from related Opportunity</description>
        <formula>OpportunityId__r.Community_Program_Offer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Community Program Offer from related Opportunity</inlineHelpText>
        <label>Community Program Offer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Program__c</fullName>
        <formula>TEXT( OpportunityId__r.Community_Program__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Community Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compliance_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Assigned Compliance Department Specialist</description>
        <inlineHelpText>Assigned Compliance Department Specialist</inlineHelpText>
        <label>Compliance Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Orders2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Constellation_Job_Id__c</fullName>
        <description>LEASE ONLY - Job Id</description>
        <inlineHelpText>LEASE ONLY - Job Id</inlineHelpText>
        <label>Lease Job Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Constellation_Lease_Inverters__c</fullName>
        <description>LEASE ONLY - How Many Constellation Lease Inverters Does This System Require</description>
        <formula>IF (Financing_Type__c == &apos;Lease&apos;, Potential_Lease_Inverters__c, &apos;0&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>LEASE ONLY - How Many Constellation Lease Inverters Does This System Require</inlineHelpText>
        <label>Constellation Lease Inverters</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Detail_Email__c</fullName>
        <description>Derived based on Contact Detail field in Opportunity</description>
        <label>Contact Detail Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Detail__c</fullName>
        <description>Mapped from Opportunity Contact Detail field</description>
        <inlineHelpText>Mapped from Opportunity Contact Detail field</inlineHelpText>
        <label>Contact Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Admin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Admin</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Orders4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Rejected_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Contract Rejected Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Coordinator_Rejected_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Coordinator Rejected Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Approval_Attached_Lease__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Lease ONLY - Credit Approval Attached</description>
        <inlineHelpText>Lease ONLY - Credit Approval Attached</inlineHelpText>
        <label>Credit Approval Attached (Lease)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Approval_Number__c</fullName>
        <description>Reference Number for Credit Approval</description>
        <inlineHelpText>Reference Number for Credit Approval</inlineHelpText>
        <label>Credit Approval Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Tier__c</fullName>
        <description>Recording the credit tier that the financing counterparty approved the customer at, impacts pricing on KW leasing</description>
        <label>Credit Tier</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Custom_Utility_Rate_Applied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Utility Rate Applied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_Utility_Rate_Set_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Custom Utility Rate Set By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Orders5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Check_is_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Customer Check for the System That was Sold is Attached</description>
        <inlineHelpText>Is The Customer Check for the System That was Sold Attached?</inlineHelpText>
        <label>Customer Check is Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Days_from_Ops_Submit_to_Approval__c</fullName>
        <description>If Ops Submitted Date is blank, this is blank. If Ops Submitted Date has a value and Approval Date is blank, this is TODAY() - Ops Submitted Date. If Ops Submitted Date has a value and Approval Date has a value, this is Approval Date - Ops Submitted Date</description>
        <formula>IF( ISBLANK(Ops_Submitted_Date__c),
   NULL,

/*ELSE*/
   IF( ISBLANK(Approval_Date__c),
      TODAY() - DATEVALUE(Ops_Submitted_Date__c),

   /*ELSE*/
      DATEVALUE(Approval_Date__c) - DATEVALUE(Ops_Submitted_Date__c)
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If Ops Submitted Date is blank, this is blank. If Ops Submitted Date has a value and Approval Date is blank, this is TODAY() - Ops Submitted Date. If Ops Submitted Date has a value and Approval Date has a value, this is Approval Date - Ops Submitted Date</inlineHelpText>
        <label>Days from Ops Submit to Approval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_from_Submission_to_ApvOrCancel__c</fullName>
        <formula>IF( ISPICKVAL(StatusCode__c, &apos;Final/Accounting Approved&apos;) , DATEVALUE( Approval_Date__c) - DATEVALUE(Time_Original_Submit_Sales_Rep__c), 

  IF(ISPICKVAL(StatusCode__c, &apos;Cancelled&apos;), DATEVALUE(Canceled_Date__c) - DATEVALUE(Time_Original_Submit_Sales_Rep__c), 
    
     TODAY() - DATEVALUE(Time_Original_Submit_Sales_Rep__c) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days from Submission to ApvOrCancel</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Prelim_Approval__c</fullName>
        <description>If Prelim Approval Date is blank, the difference between today and the Time Original Submit Sales Rep value. Otherwise, the difference between the Prelim Approval Date and the Time Original Submit Sales Rep value</description>
        <formula>IF( ISBLANK(Prelim_Approval_Date__c),
   TODAY() - DATEVALUE(Time_Original_Submit_Sales_Rep__c),
/*ELSE*/
   DATEVALUE(Prelim_Approval_Date__c) - DATEVALUE(Time_Original_Submit_Sales_Rep__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If Prelim Approval Date is blank, the difference between today and the Time Original Submit Sales Rep value. Otherwise, the difference between the Prelim Approval Date and the Time Original Submit Sales Rep value</inlineHelpText>
        <label>Days to Prelim Approval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Sales_Order_Approval__c</fullName>
        <description>Number of days between Sales Order Created Date and Sales Order Approval Date. If it&apos;s not approved, then this is the number of days since creation.</description>
        <formula>IF( ISBLANK(Time_Original_Submit_Sales_Rep__c),
   NULL,

/*ELSE*/

   IF( ISBLANK(Sales_Order_Approval_Date__c ),
      TODAY() - DATEVALUE(Time_Original_Submit_Sales_Rep__c),
   /*ELSE*/
      Sales_Order_Approval_Date__c - DATEVALUE(Time_Original_Submit_Sales_Rep__c)
   )
)</formula>
        <inlineHelpText>Number of days between Sales Order Created Date and Sales Order Approval Date. If it&apos;s not approved, then this is the number of days since creation.</inlineHelpText>
        <label>Days to Sales Order Approval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Director_of_Operations__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Director of Operations</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Director_of_Ops</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DiscountAmount__c</fullName>
        <label>Discount Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DocumentDate__c</fullName>
        <label>Document Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DocumentNumber__c</fullName>
        <externalId>true</externalId>
        <label>Document Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Down_Payment__c</fullName>
        <description>Indicate if down payment is part of the leasing contract.</description>
        <inlineHelpText>Indicate if down payment is part of the leasing contract.</inlineHelpText>
        <label>Down Payment Included on Contract</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Enerbank_Approval_Number__c</fullName>
        <description>Purchase Only - Enerbank Approval Number</description>
        <inlineHelpText>Purchase Only - Enerbank Approval Number</inlineHelpText>
        <label>SAC Approval Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enerbank_Loan_Amount__c</fullName>
        <description>Purchase Only - Enerbank Loan Amount ($)</description>
        <inlineHelpText>Purchase Only - Enerbank Loan Amount ($)</inlineHelpText>
        <label>SAC Loan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Enerbank_Loan_Expiration_Date__c</fullName>
        <description>Purchase Only - Enerbank Loan Expiration Date</description>
        <inlineHelpText>Purchase Only - Enerbank Loan Expiration Date</inlineHelpText>
        <label>SAC Loan Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enerbank_Term_Approval_Number__c</fullName>
        <description>Purchase Only - Enerbank Term Loan Approval Number</description>
        <inlineHelpText>Purchase Only - Enerbank Term Loan Approval Number</inlineHelpText>
        <label>Term Approval Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enerbank_Term_Loan_Amount__c</fullName>
        <description>Purchase Only - Enerbank Term Loan Amount</description>
        <inlineHelpText>Purchase Only - Enerbank Term Loan Amount</inlineHelpText>
        <label>Term Loan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Enerbank_Term_Loan_Expiration_Date__c</fullName>
        <description>Purchase Only - Enerbank Term Loan Expiration Date</description>
        <inlineHelpText>Purchase Only - Enerbank Term Loan Expiration Date</inlineHelpText>
        <label>Term Loan Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Escalation_Comments__c</fullName>
        <inlineHelpText>CA Escalation Comments</inlineHelpText>
        <label>Escalation Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Estimated_Community_Program_Discount__c</fullName>
        <description>Estimated cash to be paid back to the customer, or netted off invoice for program reaching final pricing tier</description>
        <label>Estimated Community Program Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_County_Tax_Credit__c</fullName>
        <description>Estimated value of County Tax Credit</description>
        <label>Estimated County Tax Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Federal_Tax_Credit__c</fullName>
        <description>Estimated value of 30% federal tax credit</description>
        <label>Estimated Federal Tax Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Incentives__c</fullName>
        <formula>Estimated_Federal_Tax_Credit__c + Estimated_State_Grant_Rebate__c + Estimated_State_Tax_Credit__c + Estimated_County_Tax_Credit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Incentives</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_State_Grant_Rebate__c</fullName>
        <description>Estimated value of all state grants/rebates</description>
        <label>Estimated State Grant/Rebate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_State_Tax_Credit__c</fullName>
        <description>Estimated value of State Tax Credit</description>
        <label>Estimated State Tax Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Explanation_of_Adder__c</fullName>
        <description>Explanation of Astrum Lease Revenue Adder ($) Field</description>
        <inlineHelpText>Explanation of Astrum Lease Revenue Adder ($) Field</inlineHelpText>
        <label>Explanation of Adder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCRA_Letter_Mailed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has the FCRA Letter Been Mailed?</description>
        <inlineHelpText>Has the FCRA Letter Been Mailed?</inlineHelpText>
        <label>FCRA Letter Mailed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Failed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Failed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Final_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Final Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Final_Commission__c</fullName>
        <description>Final Commission Amount ($)</description>
        <inlineHelpText>Final Commission Amount ($)</inlineHelpText>
        <label>Final Commission ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Finance_Associate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance Associate</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Orders3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Financing_Option__c</fullName>
        <description>What Type of Financing is This Customer Using?</description>
        <inlineHelpText>What Type of Financing is This Customer Using?</inlineHelpText>
        <label>Financing Option</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financing_Type__c</fullName>
        <description>Lease or Buy?</description>
        <inlineHelpText>Lease or Buy?</inlineHelpText>
        <label>Financing Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FreightAmount__c</fullName>
        <label>Freight Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hand_Off_Notes__c</fullName>
        <description>Notes from Sales Informing the Operations team about the project being handed off.</description>
        <inlineHelpText>Notes from Sales Informing the Operations team about the project being handed off.</inlineHelpText>
        <label>Hand Off Notes</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Has_Field_Survey_Been__c</fullName>
        <label>Has Field Survey Been Done?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hudson_OID_Amount__c</fullName>
        <description>Reflects the Hudson OID Amount field from System Design Quote.</description>
        <formula>System_Design_Quote__r.Hudson_OID_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Reflects the Hudson OID Amount field from System Design Quote.</inlineHelpText>
        <label>Hudson OID Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>